--- a/Sunset/index.html
+++ b/Sunset/index.html
@@ -57,7 +57,7 @@
 
     <img src="Bluebar.jpg" alt="Brother Logo" class="logo">
     <div class="container">
-        <h1>Brother Demo Solutions with Smooth Print</h1>
+        <h1>Brother Sunset Demo</h1>
         <h2>Zustellungsbenachrichtigung</h2>
         <form id="printForm">
             <label for="text1Object" id="text1Label">Empfänger:</label><br>
